# edge-logistics-pipeline

./: .gitignore  README.md
apps/command-center/: .env.local.example  package-lock.json  package.json  tailwind.config.ts
apps/command-center/app/: globals.css  layout.tsx  page.tsx
apps/command-center/components/: dispatch-table.tsx  map-view.tsx
apps/command-center/hooks/: use-dispatch-socket.ts  use-nearest-drivers.ts
apps/command-center/lib/: api.ts  fleet-store.ts  types.ts  utils.ts
apps/edge-api/: .env.example  driver_pinger.py  pyproject.toml  seed.py  worker.py  wrangler.toml
apps/edge-api/app/: main.py  models.py  routes.py  settings.py
apps/edge-api/app/services/: atlas_data_api.py  connection_manager.py  database.py
apps/edge-api/simulator/: driver_pinger.py
infra/mongodb/: create_indexes.js  driver.schema.json  seed.drivers.json
