[project]
name = "fleet-edge-api"
version = "0.1.0"
description = "Cloudflare Workers FastAPI geospatial telemetry API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "httpx>=0.27.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
