[project]
name = "fleet-edge-api"
version = "0.1.0"
description = "FastAPI geospatial telemetry API with Motor"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.111.0",
  "motor>=3.6.0",
  "pydantic>=2.7.0",
  "pydantic-settings>=2.2.1",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
